src/test/deca/context/invalid/affect-incompatible.deca
//ERROR :7:
{
   int a;
   boolean b;

   // Doit etre refuse.
   a = b;
}
